[package]
name = "tio"
version = "0.1.0"
authors = ["Hexilee <i@hexilee.me>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Hexilee/titan-io"
documentation = "https://docs.rs/tio"
homepage = "https://github.com/Hexilee/titan-io"
description = """
Yet another solution for asynchronous io.
"""
keywords = ["async", "await", "future", "std", "task"]
categories = ["asynchronous", "concurrency", "network-programming"]

[package.metadata.docs.rs]
features = ["docs"]
rustdoc-args = ["--cfg", "feature=\"docs\""]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-task = "1.3.1"
crossbeam-utils = "0.7.2"
crossbeam-deque = "0.7.3"
crossbeam-channel = "0.4.2"
crossbeam-queue = "0.2.1"
futures = "0.3.4"
once_cell = "1.3.1"
num_cpus = "1.12.0"
mio = { version = "0.7.0", features = ["os-poll"], optional = true }
slab = { version = "0.4.2", optional = true }

[dev-dependencies]
async-std = { version = "1.5", features = ["unstable"] }

[[bench]]
name = "task"
path = "benches/task.rs"
required-features = ["nightly"]

[features]
nightly = []
docs = ["full"]
full = ["net"]
net = ["tcp", "udp", "uds"]
tcp = ["mio/tcp", "mio-net"]
udp = ["mio/udp", "mio-net"]
uds = ["mio/uds", "mio-net"]
mio-net = ["mio", "slab"]


